src/scripts/components/map/stage/label.scss
.h5p-game-map-stage-label-container {
  border: 0;
  opacity: 1;
  position: absolute;
  text-shadow: 1px 1px 2px rgb(0 0 0 / 50%);
  transition: opacity 0.2s ease-in .75s;
  z-index: 1;

  &.touch-device {
    transition-delay: 0s;
  }

  &.multiline {
    &.bottom {
      bottom: -4.125em;
    }

    &.bottom-right {
      bottom: -3.125em;
    }

    &.bottom-left {
      bottom: -3.125em;
    }

    .h5p-game-map-stage-label {
      min-width: 11em;

      .h5p-game-map-stage-label-inner {
        white-space: initial;
      }
    }
  }

  &.bottom {
    bottom: -2.75em;
    left: 50%;
    transform: translateX(-50%);

    .h5p-game-map-stage-label .h5p-game-map-stage-label-inner {
      text-align: center;
    }
  }

  &.top {
    bottom: 120%;
    left: 50%;
    transform: translateX(-50%);

    .h5p-game-map-stage-label .h5p-game-map-stage-label-inner {
      text-align: center;
    }
  }

  &.left {
    right: 125%;
    transform: translateY(-50%);
    top: 50%;
  }

  &.right {
    left: 125%;
    transform: translateY(-50%);
    top: 50%;
  }

  &.top-left {
    bottom: 75%;
    right: 125%;
  }

  &.top-right {
    bottom: 75%;
    left: 125%;
  }

  &.bottom-right {
    bottom: -1.75em;
    left: 125%;
  }

  &.bottom-left {
    bottom: -1.75em;
    right: 125%;
  }

  &.visibility-hidden {
    visibility: hidden;
    opacity: 0;
  }

  .h5p-game-map-stage-label {
    transition: height 0.2s linear;
    border-radius: 3px;
    background: rgba(0,0,0,0.7);
    color: #fff;
    line-height: 1.5;
    padding: 0.5em 1em 0.5em 1em;
    overflow: hidden;
    font-size: 0.9em;
    min-width: 6em;
    max-width: 11em;
    max-height: 20.5em;

    .h5p-game-map-stage-label-inner {
      white-space: pre;
      white-space: initial;
      text-overflow: ellipsis;
      overflow: hidden;
      text-align: left;
      display: -webkit-box;
      -webkit-line-clamp: 2;
      -webkit-box-orient: vertical;
    }
  }
}

